add video and picture

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCUMENT html>
 <head>
   <title>Excursion</title>
+  <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
-    <p><a href="www.youtube.com">Download Excursion (Coming Soon!)</a></p>
-    <img src=""
+  <p><a href="www.youtube.com">Download Excursion (Coming Soon!)</a></p>
+    <video src="excursion.mp4" autoplay></video>
+  <h1>Your personal travel guide</h1>
+  <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+  <img src="camp.jpg">
+  <img src="phone.png">
+  <h1>Coming Soon for iPhone and Android</h1>
+  <a href="www.youtube.com">Download Excuriosn Coming Soon!</a>
+    
   
 </body>
