--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
   <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h1>Discover hidden places in the world around you</h1>
-  <p><a href="www.youtube.com">Download Excursion (Coming Soon!)</a></p>
-    <video src="excursion.mp4" autoplay></video>
-  <h1>Your personal travel guide</h1>
-  <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+  <div class="center">
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a href="www.youtube.com">Download Excursion (Coming Soon!)</a></p>
+    <video src="excursion.mp4" autoplay loop></video>
+  </div>
+  <div class="center">
+    <h1>Your personal travel guide</h1>
+    <p>Excursion remembers places you like, and recommends new points of interest around you</p>
   <img src="camp.jpg">
+  </div>
+  <br/><br/>
+  <div class="center">
   <img src="phone.png">
   <h1>Coming Soon for iPhone and Android</h1>
   <a href="www.youtube.com">Download Excuriosn Coming Soon!</a>
-    
+  </div>  
+  <div id="footer">
+    <p>@ Excursion</p>
+    </div>
   
 </body>
